[package]
name = "cppandrust"
version = "0.1.0"
authors = ["Artjom Polyanskiy <35273601+open-epsilon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serial = "0.4.0"

[build-dependencies]
cc = "1.0"
