[package]
name = "mops"
version = "0.1.0"
authors = ["Mops"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
# bluetooth-serial-port = "0.6.0"
# io_bluetooth = "*"
# serial = "0.4.0"
# serialport = "3.3.0"
winapi = "0.3.8"


serial-windows = "0.4.0"

[build-dependencies]
cc = "1.0"
